<resources>
    <string name="app_name">Giphy Notification App with RecyclerView </string>
    <string name="send_notification">send notification</string>
    <string name="cats">Cats</string>
    <string name="dogs">Dogs</string>
    <string name="which_do_you_prefer">Which do you prefer?</string>
    <string name="next">next</string>
    <string name="gif">gif</string>
    <string name="other">Other</string>
    <string name="notification_already_sent">You have already sent a notification from here!</string>
    <string name="toast_error">please enter something!</string>
    <string name="toast_no_results">your query returned no results!</string>
</resources>
